fixed and added anchor links in both use cases

--- a/use-cases/observability.mdx
+++ b/use-cases/observability.mdx
@@ -19,7 +19,7 @@ One example might be a dashboard, showing various metrics to an end-user who nee
 Observability could also go more granular than that, representing visually how different resources installed in the cluster are connected and dependent on each other.
 In summary, observability is a way to visualize, organize and understand what’s going on in our Kubernetes clusters.
 
-### Why do people use observability tools?
+### Why use observability tools?
 
 Kubernetes is by design a dynamic, distributed system, which can make it difficult to get the full picture of what’s happening inside a cluster.
 This can make managing and troubleshooting your cluster difficult and time consuming, and may require the integration of multiple third-party tools to get the desired outputs.
@@ -161,7 +161,7 @@ If your visualization tools have highlighted a cause for concern that needs furt
 This will likely be in the form of logs, which you can filter to target specific flows, workloads, or namespaces where the flow metadata can be reviewed.
 Logs typically hold all of the information relating to a flow, and that information is simplified or extracted to provide a clearer focus in dashboards or visualizations.
 Using other tools before you analyze log files helps you narrow down the scope of troubleshooting or analysis.
-When you're ready to dive in to log files, you should already have a good idea of metadata to filter on or target, providing a more efficient approach to their investigation.
+When you're ready to dive in to log files, you should already have a good idea of metadata to filter on or target, providing a more efficient approach to your investigation.
 
 In Calico Enterprise and Calico Cloud, logs are stored in Elasticsearch.
 There are several different log types that are collected:
@@ -253,11 +253,11 @@ This suits users who are using logs to narrow focus for a specific use or comple
 
 Calico Enterprise and Calico Cloud's observability features go beyond visualizing the internals of a cluster, and provide a place to highlight potential issues or security concerns, troubleshoot communication issues, and even identify flows that need to be secured, such as:
 
-* Network policies and flows
-* Cluster traffic
-* Flow properties and metadata
-* DNS issues
-* TCP performance
+* [Network policies and flows](./observability#network-policies-and-flows)
+* [Cluster traffic](./observability#cluster-traffic)
+* [Flow properties and metadata](./observability#flow-properties-and-metadata)
+* [DNS issues](./observability#dns)
+* [TCP performance](./observability#tcp)
 
 Each section has been grouped into a few different scenarios that outline how Calico Enterprise and Calico Cloud can help solve these use cases.
 
