--- a/calico_versioned_docs/version-3.27/getting-started/index.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/index.mdx
@@ -6,6 +6,16 @@ hide_table_of_contents: true
 # Install Calico
 
 import DocCardList from '@theme/DocCardList';
+import { DocCardLink, DocCardLinkLayout } from '../../../src/___new___/components';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 
-<DocCardList items={useCurrentSidebarCategory().items} />
+### Test card layout
+
+Some text here explaining something about Calico
+
+<DocCardLinkLayout>
+  <DocCardLink docId='getting-started/bare-metal/requirements' />
+  <DocCardLink docId='getting-started/openstack/installation/verification' />
+  <DocCardLink docId='getting-started/openstack/installation/devstack' />
+  <DocCardLink docId='getting-started/kubernetes/hardway/istio-integration' />
+</DocCardLinkLayout>
