minor, final edits

--- a/use-cases/observability.mdx
+++ b/use-cases/observability.mdx
@@ -11,19 +11,15 @@ This guide will walk you through the different observability and monitoring capa
 
 ### What is observability?
 
-Observability is the ability to understand the internals of a system by analyzing the internals of a system. 
-In the context of Kubernetes, that system would be the cluster, and the internals could be nodes, pods, resources, network policies, and so on.
-In complex systems, with lots of dynamic, interconnected parts, observability puts a visual frontend on what would otherwise likely be a series of recursive commands in a CLI to obtain the same information.
-What that front-end is will depend on the software that’s integrated within the cluster, and will likely depend on which internals are being shown, and who the target audience is.
-One example might be a dashboard, showing various metrics to an end-user who needs an overview of a system to monitor it’s health. 
-Observability could also go more granular than that, representing visually how different resources installed in the cluster are connected and dependent on each other.
-In summary, observability is a way to visualize, organize and understand what’s going on in our Kubernetes clusters.
+People use observability tools to understand a complex system by visually analyzing what's going on in that system.
+With Calico, that system is the cluster and the entities within it, such as the nodes, pods, resources, network policies, and so on.
+In complex systems with lots of dynamic, interconnected parts, observability puts an interactive, visual frontend on what would otherwise likely be a series of recursive commands in a CLI to obtain the same information.
 
 ### Why use observability tools?
 
 Kubernetes is by design a dynamic, distributed system, which can make it difficult to get the full picture of what’s happening inside a cluster.
-This can make managing and troubleshooting your cluster difficult and time consuming, and may require the integration of multiple third-party tools to get the desired outputs.
-Without observability tools, you can struggle to:
+This can make monitoring, managing and troubleshooting your cluster difficult and time consuming, and may require the integration of multiple third-party tools to get the desired outputs.
+Without observability tools, you may struggle to:
 
 * Troubleshoot issues between services
 * Troubleshoot network issues, such as latency, dropped packets, or increases in load
@@ -191,7 +187,7 @@ Flow metadata provides an extra level of detail for understanding, investigating
 
 Specific examples of how to use these observability features for these issues can be found below.
 
-### Most-detailed observability
+### Customizable, detailed visualizations
 
 Because Calico Enterprise and Calico Cloud store logs in Elasticsearch, these applications also provide Kibana as an interface to explore Elasticsearch logs and gain insights into workload communication, traffic volume, performance, and other key aspects of cluster operations.
 The dashboards in the Manager UI are suited to anyone who needs to observe cluster health more generally.
@@ -274,7 +270,7 @@ Denied flows can easily be identified in many places within Calico Enterprise or
 * *Dynamic Service and Threat Graph* - Dynamic Service and Threat Graph flow lines will change to red or orange if flows are being denied.
 * *Flow Viz* - Easily toggle the status view or filter to easily list or visualize denied flows (in red). 
 * *Logs* - Flow logs viewed through Dynamic Service and Threat Graph and will automatically filter based on the current view, or create custom filters for denied traffic.
-* *Kibana* - Dashboards or logs accessed through Kibana can be filtered with queries specifically targeting flows with action : deny
+* *Kibana* - Dashboards or logs accessed through Kibana can be filtered with queries specifically targeting flows with `action : deny`
 
 [See Kibana in action](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=3ezb78hxy2).
 
@@ -303,9 +299,9 @@ Visualizing inbound and outbound bytes may help identify whether your applicatio
 
 [See how filtering can be set up in dashboards to view bytes in/out for specific namespaces and find flows of interest](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=6qmpv3il71).
 
-##### Identify flows with “bytes_in : 0”
+##### Identify flows with `bytes_in : 0`
 
-Flows with “bytes_in : 0” and “action : allow” indicate that an upstream firewall denied a flow, or the server is not responding to the connection.
+Flows with `bytes_in : 0` and `action : allow` indicate that an upstream firewall denied a flow, or the server is not responding to the connection.
 This can be used to troubleshoot issues related to firewall policies outside of Kubernetes.
 Typically, Calico Enterprise or Calico Cloud will show that the flow was allowed but the client or user will complain that the connection was not established.
 
@@ -336,7 +332,7 @@ It can also be used to identify any communication related to a vulnerability, su
 * *Kibana* - Dashboards and logs in Kibana can be queried using kql to search for flows with specific process ids, names or arguments.
   This will return all flows that match, helping to identify the source and destination of flows for those processes.
 
-To view an example using Kibana to filter and identify flows related to log4j communication, watch [this video](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=ooka4wvfxz)
+[See an example using Kibana to filter and identify flows related to log4j communication.](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=ooka4wvfxz)
 
 ##### Identify traffic to specific service ports
 
@@ -362,7 +358,7 @@ This helps you identify workloads that are communicating with public external se
 * *Kibana* - The Kibana dashboards have a "unique-domains" widget that lists the top values of dest_domains from flow logs, with a record count.
   Clicking on a domain name in that widget will filter all flows that sent traffic to that FQDN.
 
-To see this in Kibana, watch [this video](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=huq9luzvux)
+[See how to identify traffic to specific FQDNs in Kibana](https://fast.wistia.com/embed/channel/lhjf79y3oy?wchannelid=lhjf79y3oy&wmediaid=huq9luzvux)
 
 ##### Identify traffic to specific destination IPs
 
