--- a/calico-enterprise_versioned_docs/version-3.19-2/threat/security-event-management.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-2/threat/security-event-management.mdx
@@ -4,12 +4,6 @@ description: Get alerts on threats in a single dashboard.
 
 # Security event management
 
-:::note
-
-This feature is tech preview. Tech preview features may be subject to significant changes before they become GA.
-
-:::
-
 ## Big picture
 
 Get alerts on security events in a single dashboard.
@@ -22,6 +16,7 @@ Security events indicate that a threat actor may be present in your Kubernetes c
 - Identify impacts on applications
 - Understand the scope and frequency of the issue
 - Manage alert noise by dismissing events (show/hide)
+- Manage alert noise by creating exceptions
 
 ## Before you begin
 
@@ -34,9 +29,42 @@ Security events indicate that a threat actor may be present in your Kubernetes c
 - Only WAF basic security events. Over time, the dashboard will contain a full range of {{prodname}} security events.
 - You cannot control which users can view or edit the page using fine-grained role-based access controls
 
-## Security events dashboard
+## Security Events Dashboard
 
-In Manager UI, go to **Threat defense**, **Security Events**.
+The **Security Events Dashboard** page gives you a high-level view of recent security events.
+You can use this visual reference to get an overall sense of your cluster's health.
+If you find anything that merits further investigation, you can click on an event for more details. 
+
+* In Manager UI, go to **Threat defense&nbsp;>&nbsp;Security Events Dashboard**.
+
+## Security Events
+
+The **Security Events** page lists all the security events that have been detected for your cluster.
+You can view and filter your security events to focus on 
+
+* In Manager UI, go to **Threat Defense&nbsp;>&nbsp;Security Events**.
+
+### Dismiss a security event
+
+You can clear your security events list by dismissing events that you've finished reviewing.
+When you dismiss an event, that event is no longer visibile in the list.
+
+1. In Manager UI, go to **Threat Defense&nbsp;>&nbsp;Security Events**.
+1. Find a security event in the list, and then click **Action&nbsp;>&nbsp;Dismiss Security Event**.
+
+### Create a security event exception
+
+You can prevent certain kinds of security events from appearing in the list by creating a security event exception.
+This is helpful if you want to reduce alert noise for workloads that you know are safe.
+When you create an exception, all matching security events are removed from the security events list.
+Future matches will not appear in the list.
+
+1. In Manager UI, go to **Threat Defense&nbsp;>&nbsp;Security Events**.
+1. Find a security event in the list, and then click **Action&nbsp;>&nbsp;Add exception**.
+1. On the **Create an Exception** dialog, select a scope for the exception and click **Create Exception**.
+
+You can manage your exceptions by clicking **Threat Defense&nbsp;>&nbsp;Security Events&nbsp;>&nbsp;Exceptions**.
+You can browse, edit, and delete exceptions on the list.
 
 ### UI help
 
